--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -24,5 +24,6 @@
     </div>
 {% endblock %}
 {% block script %}
-
+    <script type="text/javascript" src="{% static 'expert/js/jquery.emojipicker.js' %}"></script>
+    <script type="text/javascript" src="{% static 'expert/js/jquery.emojis.js' %}"></script>
 {% endblock %}
