--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -9,6 +9,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="{% static 'expert/css/jquery.emojipicker.css' %}">
+      <link rel="stylesheet" href="{% static 'expert/css/jquery.emojipicker.a.css' %}">
       <link rel="stylesheet" href="{% static 'expert/css/style.css' %}">
       <link rel="stylesheet" href="{% static 'expert/css/style_xs.css' %}">
   </head>
@@ -104,6 +106,7 @@
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="{% static 'expert/js/persianumber.min.js' %}"></script>
   {% block script %}{% endblock %}
+  <script type="text/javascript" src="{% static 'expert/js/script-functions.js' %}"></script>
   <script type="text/javascript" src="{% static 'expert/js/script.js' %}"></script>
   </body>
 </html>
