--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -47,8 +47,8 @@
 {#                                        <button class="show-researcher">مشاهده</button>#}
 {#                                        <button class="accept-researcher">تایید</button>#}
 {#                                        <button class="refuse-researcher">رد</button>#}
-                                        <button class="researcher-card-button-show"><i class="material-icons">remove_red_eye</i></button>
-                                        <button class="researcher-card-button-check"><i class="material-icons">check</i></button>
+                                        <button class="researcher-card-button-show">مشاهده</button>
+                                        <button class="researcher-card-button-check">تایید</button>
                                         <button class="researcher-card-button-close"><i class="material-icons">close</i> </button>
                                     </div>
                                 </div>
