--- a/expert/templates/expert/layouts/dialog.html
+++ b/expert/templates/expert/layouts/dialog.html
@@ -1,4 +1,4 @@
-<div class="dialog-main">
+<div class="dialog-main technique-dialog-main">
     <div class="dialog card text-right">
         <div class="close"></div>
         <div class="row technique-dialog">
