--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="chamran_btn" style="left: 0;bottom: 0">ذخیره تغییرات</button>
+                    <button type="submit" class="chamran_btn" style="left: 0;bottom: 0">ذخیره تغییرات</button>
                 </form>
             </div>
         </div>
